--- a/spotify.html
+++ b/spotify.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify- Just Attach to the Music</title>
-    <link rel="stylesheet" href="spotify1.css" />
-    <link rel="stylesheet" href="spotify1.js" />
+    <link rel="stylesheet" href="spotify.css" />
+    <script src="spotify.js"></script>
   </head>
   <body>
     <nav>
@@ -22,17 +22,110 @@
 
     <div class="container">
       <div>
-        <div class="SongItem">
-          <div>
+        <div class="SongItemConatiner">
+          <h3>This Is The Best Songs</h3>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
             <span>Let me love you</span>
             <span class="SongPlay">
-              <span>05:21</span><i class="fa-solid fa-circle-play"></i>
-            </span>
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i> </span
+            ></span>
           </div>
-          <div>
-            <span>Let me love you</span>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
             <span class="SongPlay">
-              <span>05:21</span><i class="fa-solid fa-circle-play"></i
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
+            ></span>
+          </div>
+          <div class="SongItem">
+            <img src="song.webp" alt="" />
+            <span>Tere Hoke Rahenge </span>
+            <span class="SongPlay">
+              <span class="timespan"
+                >05:21 <i class="fa-solid fa-circle-play"></i></span
             ></span>
           </div>
         </div>
@@ -46,6 +139,11 @@
         <i class="fa-solid fa-3x fa-backward"></i>
         <i class="fa-solid fa-3x fa-circle-play"></i>
         <i class="fa-solid fa-3x fa-forward"></i>
+      </div>
+      <div class="songinfo">
+        
+        <img src="GIF.gif" alt="">
+        <h6>Now playing </h6>
       </div>
     </div>
 
